fix: flex-wrap height

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5,6 +5,7 @@
 }
 .flex-wrap {
   display: flex;
+  height: 100vh;
 }
 
 .select-box {
